--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,18 @@ aiosignal==1.3.1
 async-timeout==4.0.2
 asyncpg==0.27.0
 attrs==23.1.0
+beautifulsoup4==4.12.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
 frozenlist==1.3.3
 idna==3.4
+lxml==4.9.2
 multidict==6.0.4
+numpy==1.24.3
+pip==23.1.2
 requests==2.28.2
+setuptools==65.5.1
+soupsieve==2.4.1
 urllib3==1.26.15
+wheel==0.38.4
 yarl==1.9.1
